# scintilla-inteligencia

./: .gitignore  README.md  pyproject.toml
.fabrica/: principles.md
.github/workflows/: bypass-detector.yml  ci.yml  diagnose.yml  factory-gates.yml  introspect-bd.yml  pr-to-site.yml  refresh.yml
docs/: validacao_oficial.md
etl/: benchmark.py  build.py  diagnose.py  indicators.py  introspect.py  processors.py  rebuild_benchmarks.py  runner.py  sanity.py
etl/queries/: cob_alcance_ponderado.sql  cob_distribuicao_dependencia.sql  cob_distribuicao_modalidade.sql  cob_eixos_cobertos.sql  cob_matriculas_ept_per_jovem.sql  cob_municipios_com_ept.sql  cob_perfil_alunos.sql  din_crescimento_matriculas_5y.sql  din_cursos_novos_ept.sql  inf_conectividade_ept.sql  mer_aderencia_eixo_cbo.sql  mer_coorte_sintetica_pnad.sql  mer_demanda_cbo_top.sql  mer_demanda_mesorregiao.sql  mer_desfecho_29_pnad.sql  mer_neet_rate.sql  mer_premio_salarial_escolaridade.sql  mer_renda_jovens_pnad.sql  mer_saldo_caged_tecnicos.sql  pne_m12a.sql  pne_m12b.sql  pne_m12c.sql  pne_m12f.sql  qua_abandono_em_ept.sql  qua_aderencia_docente_ept.sql  qua_ideb_escolas_ept.sql  qua_ingresso_es_pnad.sql  qua_razao_aluno_professor_ept.sql  qua_saeb_proficiencia_ept.sql  qua_taxas_rendimento_ept.sql
etl/reference/: cnct_curso_eixo.csv  eixo_cnct_to_cbo3.md
etl/schemas/: benchmark.schema.json  metadata.schema.json
output/: bd_schema_report.json  benchmark.json  metadata.json  schema.json
tests/: test_benchmark.py  test_indicators.py  test_runner.py  test_schema.py  test_smoke.py
(+32 files in other folders)
